@@ -6,25 +6,29 @@ import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.io.PrintStream;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
 
-import com.sun.net.httpserver.HttpServer;
 import com.google.gson.Gson;
 import com.google.gson.JsonObject;
+import com.sun.net.httpserver.HttpServer;
 
 class MainTest {
 
+    private final Gson gson = new Gson();
+
     @Test
-    void mainPrintsPlaceholderMarkup() throws Exception {
-        String sampleText = "Комедия пәрдәдә";
-        MorphologyService service = new MorphologyService();
-        JsonObject expected = service.analyzeText(sampleText);
+    void mainPrintsMarkupForFullText() throws Exception {
+        String sampleText = readResource("/texts/berenche_teatr.txt");
+        String expectedMarkup = readResource("/markup/berenche_teatr_markup.txt");
 
         PrintStream originalOut = System.out;
         InputStream originalIn = System.in;
@@ -37,16 +41,15 @@ class MainTest {
         } finally {
             System.setOut(originalOut);
             System.setIn(originalIn);
-            service.close();
         }
 
         String actual = capture.toString(StandardCharsets.UTF_8.name());
-        assertEquals(expected.toString(), actual);
+        assertEquals(expectedMarkup, actual);
     }
 
     @Test
-    void httpEndpointReturnsMarkup() throws IOException {
-        String sampleText = "Комедия пәрдәдә";
+    void httpEndpointReturnsMarkupForFullText() throws IOException {
+        String sampleText = readResource("/texts/berenche_teatr.txt");
         MorphologyService service = new MorphologyService();
         WebMorphologyApplication application = new WebMorphologyApplication(service);
         HttpServer server = application.start(0);
@@ -57,7 +60,7 @@ class MainTest {
             connection.setDoOutput(true);
             connection.setRequestProperty("Content-Type", "application/json; charset=utf-8");
             try (OutputStream output = connection.getOutputStream()) {
-                String payload = new Gson().toJson(java.util.Collections.singletonMap("text", sampleText));
+                String payload = gson.toJson(Map.of("text", sampleText));
                 output.write(payload.getBytes(StandardCharsets.UTF_8));
                 output.flush();
             }
@@ -68,10 +71,27 @@ class MainTest {
             }
             assertEquals(200, connection.getResponseCode());
             JsonObject expected = service.analyzeText(sampleText);
-            assertEquals(expected, new Gson().fromJson(response, JsonObject.class));
+            assertEquals(expected, gson.fromJson(response, JsonObject.class));
         } finally {
             server.stop(0);
             service.close();
+        }
+    }
+
+    private String readResource(String path) throws IOException {
+        try (InputStream stream = getClass().getResourceAsStream(path)) {
+            if (stream == null) {
+                throw new IOException("Missing resource: " + path);
+            }
+            try (InputStreamReader reader = new InputStreamReader(stream, StandardCharsets.UTF_8)) {
+                return new BufferedReader(reader).lines().collect(Collectors.joining("\n"));
+            }
+        }
+    }
+
+    private static class BufferedReader extends java.io.BufferedReader {
+        BufferedReader(InputStreamReader reader) {
+            super(reader);
         }
     }
 }
